--- a/readme
+++ b/readme
@@ -41,5 +41,17 @@ Make a function that takes in the r value and conducts {a}, effectively producin
 
 --continue here-- 21:41 02/12/2025
 
+x: [r->, v->] = [r_x, r_y, r_z, v_x, v_y, v_z] (INPUT VARIABLES)
+t
+
+v->: d/dt*r->
+a->: d/dt*v->
+
+r_(t+1)=r_t+v_t*dt
+v_(t+1)=v_t+a_t*dt
+x_(t+1)=x_t+x_t*dt
+
+We want to predict the position of the object after t seconds
+
 
 } ~May
