Updated readme.md #2

--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
-![equation](https://latex.codecogs.com/png.latex?-\frac{GM_{\oplus}}{r}+\sum_{n=2}^{N_z}\frac{J_nP_n^{0}(\cos\theta)}{r^{n+1}}+\sum_{n=2}^{N_t}\sum_{m=1}^n\frac{P_n^m(\cos\theta)(C_n^m\cos(m\phi)+S_n^m\sin(m\phi))}{r^{n+1}})
+![Gravitational Potential](https://latex.codecogs.com/png.latex?-\frac{GM_{\oplus}}{r}%20+%20\sum_{n=2}^{N_z}%20\frac{J_n%20P_n^{0}(\cos\theta)}{r^{n+1}}%20+%20\sum_{n=2}^{N_t}%20\sum_{m=1}^{n}%20\frac{P_n^{m}(\cos\theta)\,(C_n^m%20\cos(m\phi)%20+%20S_n^m%20\sin(m\phi))}{r^{n+1}})
 
 
 Basically, from what I've read from the wiki page, if I'm getting this right, here's the description
